update readme files

--- a/rover-64p/moon-rover-64p-multi-tile-r2.html
+++ b/rover-64p/moon-rover-64p-multi-tile-r2.html
@@ -70,7 +70,7 @@
 		menu.style.cssText = ' background-color: #eee; border: 1px #ccc solid; left: -300px;  max-height: ' + ( window.innerHeight - 50 ) + 'px; ' +
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; width: 260px; ';
 		menu.innerHTML = '<h2><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
+			'<a id=i href=http://jaanga.github.io/moon/rover-64p/ >&#x24D8;</a></h2>' +
 			'<div><select id=selPlace></select></div>' +
 			'<div id=info ></div>' +
 			'<div id=info2 ></div>' +
