--- a/voyager/shaded/moon-voyager-shaded-r1-1.html
+++ b/voyager/shaded/moon-voyager-shaded-r1-1.html
@@ -52,7 +52,7 @@
 	function init() {
 
 		var css = document.body.appendChild( document.createElement('style') );
-		css.innerHTML = 'body { background-image: url("../../images/stars-2048x1024.png"); ' +
+		css.innerHTML = 'body { background-image: url("http://jaanga.github.io/moon/images/stars-2048x1024.png"); ' +
 				'font: 12pt monospace; margin: 0; overflow: hidden; }' +
 			'h3 { margin: 0; }' +
 			'#bars, #i { font-size: 24pt; text-decoration: none; }' +
