--- a/iframe-carousel-r2.html
+++ b/iframe-carousel-r2.html
@@ -8,15 +8,18 @@
 <body>
 <script>
 
-	var interval = 15000;
+	var interval = 20000;
 	var timer;
 	var editor = 'http://exploratoria.github.io/lib/code-edit-view/code-edit-view.html#';
 	var sites = [
 
 		['Moon Voyager Gamer', editor + 'http://jaanga.github.io/moon/voyager/gamer/moon-voyager-gamer-r2-1.html' ],
-		['Moon Voyager Image Map', editor + 'http://jaanga.github.io/moon/voyager/image-map/moon-voyager-image-map-r1-2' ],
-		['Moon Voyager Shaded', editor + 'http://jaanga.github.io/moon/voyager/shaded/moon-voyager-shaded-r1-1' ],
-		['Moon Voyager Altitude', editor + 'http://jaanga.github.io/moon/voyager/altitude/moon-voyager-altitude-r1-1' ]
+		['Moon Voyager Image Map', editor + 'http://jaanga.github.io/moon/voyager/image-map/moon-voyager-image-map-r1-2.html' ],
+		['Moon Voyager Shaded', editor + 'http://jaanga.github.io/moon/voyager/shaded/moon-voyager-shaded-r1-1.html' ],
+		['Moon Voyager Altitude', editor + 'http://jaanga.github.io/moon/voyager/altitude/moon-voyager-altitude-r1-1.html' ],
+		['Moon Rover Mobile', editor + 'http://jaanga.github.io/moon/rover-mobile/moon-rover-mobile-r5-3.html' ],
+		['Moon Rover 64P', editor + 'http://jaanga.github.io/moon/rover-64p/moon-rover-64p-multi-tile-r2.html' ],
+		['Moon Rover 256P', editor + 'http://jaanga.github.io/moon/rover-256p/moon-rover-256p-multi-tile-r1.html' ]
 
 	]
 
@@ -35,7 +38,7 @@
 
 		var content = document.body.appendChild( document.createElement( 'div' ) );
 		content.innerHTML = 
-			'<iframe id=ifr width=100% height=' + ( window.innerHeight - 40 ) + 'px ></iframe>' +
+			'<iframe id=ifr width=100% height=' + ( window.innerHeight - 50 ) + 'px ></iframe>' +
 			'<center><p id=buttons ></p></center>' +
 		'';
 
