add voyager satellites

--- a/iframe-carousel-r2.html
+++ b/iframe-carousel-r2.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang=en >
+<html>
 <head>
-<title>Iframe Random Site Show v0.1.1</title>
-<meta charset=utf-8 />
-<meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
+<meta charset=utf-8 >
+<title>iframe-carousel-r2.html</title>
+<meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' >
 </head>
 <body>
 <script>
