--- a/voyager/satellites/moon-voyager-satellites-r1.html
+++ b/voyager/satellites/moon-voyager-satellites-r1.html
@@ -73,7 +73,7 @@
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/basic/ >&#x24D8;</a>' +
+				'<a id=i href=http://jaanga.github.io/moon/voyager/satellites/ >&#x24D8;</a>' +
 			'</h3>' +
 			'<p id=message ></p>' +
 			'<p>Vertical Scale <input type=range id=inpScale min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;updateTerrain(); /></p>' +
