--- a/utilities/img-data-parser/img-read-first-line.html
+++ b/utilities/img-data-parser/img-read-first-line.html
@@ -16,7 +16,15 @@
 	'';
 
 //	var fileName = 'C:/temp/moon-heightmaps/WAC_GLD100_E300N0450_256P.IMG';
-	var fileName = 'C:/temp/moon-heightmaps/WAC_GLD100_P900N0000_256P.IMG';
+//	var fileName = 'C:/temp/moon-heightmaps/WAC_GLD100_P900N0000_256P.IMG';
+
+	var path = 'c:/temp/moon-heightmaps/';
+
+	var fileName = path + 'WAC_GLD100_E300N0450_256P.IMG';
+//	var fileName = path + 'WAC_GLD100_E300N1350_256P.IMG';
+
+// No CORS access ;-(
+//	var fileName = 'http://lroc.sese.asu.edu/data/LRO-L-LROC-5-RDR-V1.0/LROLRC_2001/DATA/SDP/WAC_GLD100/WAC_GLD100_E300N0450_100M.IMG';
 
 	var xmlHttp;
 
