--- a/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html
+++ b/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html
@@ -66,7 +66,7 @@ http://gamingjs.com/ice/#
 				'<a id=i href=http://jaanga.github.io/moon/voyager/sun-earth-moon/ >&#x24D8;</a>' +
 			'</h3>' +
 //			'<p><select id=selPlace></select></p>' +
-			'<p id=message ></p>' +
+			'<p id=message >Press spacebar to change camera. P to pause. 1, 2 or 3 to adjust speed.</p>' +
 //			'<p>Vertical Scale <input type=range id=inpScale min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;updateTerrain(); /></p>' +
 //			'<p><input type=checkbox id=chkPlacards onchange=togglePlacards(); checked /> Display placards</p>' +
 //			'<p><input type=checkbox id=inpHelpers onchange=toggleHelpers(); checked /> Display axis</p>' +
