--- a/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html
+++ b/voyager/sun-earth-moon/moon-voyager-sun-earth-moon-r1.html
@@ -214,6 +214,12 @@ http://gamingjs.com/ice/#
 
 	}
 
+	function slideHamburger() {
+
+		hamburger.style.left = hamburger.style.left === '220px' ? 0 : '220px';
+
+	}
+
 	function animate() {
 
 		requestAnimationFrame( animate );
