--- a/voyager/altitude/index.html
+++ b/voyager/altitude/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang = en >
+<html>
 <head>
-<title></title>
-<meta charset = utf-8 >
-<meta name = viewport content = 'width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0' >
+<meta charset=utf-8 >
+<meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui' >
 </head>
 <body>
-<script src = http://jaanga.github.io/cookbook-html/templates/reader-iframes/readme-reader-iframes.js ></script>
+
+<script src=http://jaanga.github.io/cookbook-html/templates/reader-iframes/readme-reader-iframes.js ></script>
+
 </body>
 </html>
