--- a/voyager/gamer/moon-voyager-gamer-r2-2.html
+++ b/voyager/gamer/moon-voyager-gamer-r2-2.html
@@ -1,22 +1,21 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang=en >
 <head>
 <meta charset=utf-8 />
-<title>Moon Voyager Gamer R2.1</title>
+<title>Moon Voyager Gamer R2.2</title>
 <meta charset=utf-8 />
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<!--
 <script src=http://mrdoob.github.io/three.js/build/three.min.js ></script>
 <script src=http://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
 <script src=http://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
--->
 
+<!--
 <script src = http://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
 <script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
 <script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
-
+-->
 <script>
 
 // Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
@@ -78,7 +77,7 @@
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/gamer/ >&#x24D8;</a>' +
+				'<a id=i href=http://jaanga.github.io/moon/voyager/gamer/ >🛈</a>' +
 			'</h3>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p id=message ></p>' +
